Fix for wrapping in empty console

--- a/src/vs/workbench/contrib/positronConsole/browser/components/emptyConsole.css
+++ b/src/vs/workbench/contrib/positronConsole/browser/components/emptyConsole.css
@@ -9,7 +9,6 @@
 }
 
 .empty-console .title {
-	display: flex;
 	margin: 10px;
 }
 
